# Clickovski

./: .gitignore  LICENSE  README.md  babel.config.js  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: publish.yml
public/animations/: rocket.lottie
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: dsl.rs  lib.rs  main.rs  script_core.rs  utils.rs
src-tauri/src/windows/: win.rs
src/app/: Launcher.tsx  Providers.tsx  SafeHydrate.tsx  emotion.tsx  head.tsx  layout.tsx  page.tsx
src/app/settings/: head.tsx  layout.tsx  page.tsx
src/app/update/: head.tsx  layout.tsx  page.tsx
src/components/: Checkbox.tsx  ClickAwayListener.tsx  DetectOS.js  Flags.tsx  Frame.tsx  FramerAnimatePresence.tsx  Launcher.tsx  LottieAnimation.js  MouseComponent.tsx  Providers.tsx  Theme.tsx  i18n.js  i18n.ts  useTheme.js
src/components/icons/: Arabic.tsx  Brazil.tsx  British.js  British.tsx  CloseIcon.js  CloseIcon.tsx  DownloadIcon.js  DownloadIcon.tsx  France.js  France.tsx  Germany.js  Germany.tsx  MinimizeIcon.js  MinimizeIcon.tsx  Porteguese.tsx  RecordIcon.js  RecordIcon.tsx  RightIcon.js  RightIcon.tsx  Russia.js  Russia.tsx  SettingsIcon.js  SettingsIcon.tsx  Spain.js  Spain.tsx  Turkey.js  Turkey.tsx  WarningIcon.js  WarningIcon.tsx  index.js  index.ts
src/components/ui/: checkbox.tsx  progress.tsx  switch.tsx  tooltip.tsx
src/lib/: constants.js  constants.ts  utils.ts
src/localization/: ar.json  de.json  en.json  es.json  fr.json  pt.json  ru.json  tr.json
src/pages/: _app.js  _document.js  index.js  settings.js  update.js
src/redux/: actions.js  actions.ts  reducers.js  reducers.ts  store.js  store.ts  types.ts
src/state/: store.ts
src/styles/: CSS.module.css  globals.css
