[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
enigo = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-zustand = "0.3.1"
rust-i18n = "3.1.5"
tauri-plugin-process = "2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.9.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "handleapi",
    "processthreadsapi",
    "winnt",
    "securitybaseapi",
    "impl-default",
] }

[package.metadata.i18n]
available-locales = ["en", "tr", "ru", "de", "es", "fr", "pt", "ar"]
default-locale = "en"
